--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0"
   },
   "scripts": {
     "start": "node ./dist/index.js",
-    "build":"tsc"
+    "build": "tsc"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
